# earning_scraping_agent

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CLAUDE.md  CONTEXT.md  Dockerfile  README.md  docker-compose.yml  env.example  project_flow.md  pyproject.toml
.github/: copilot-instructions.md
.github/instructions/: agent-harness.instructions.md  earnings.instructions.md
.github/skills/diagnose/: SKILL.md
.github/skills/grill-with-docs/: SKILL.md
.github/skills/handoff/: SKILL.md
.github/skills/improve-codebase-architecture/: SKILL.md
.github/skills/tdd/: mocking.md  tests.md
.github/skills/zoom-out/: SKILL.md
data/company_hints/: AAPL.md  README.md
data/reference/: tickers.json
docs/adr/: 0001-needs-reextract-as-routing-signal.md  0002-metric-keys-preserved-verbatim.md  0003-validators-separate-from-checkers.md  0004-mongodb-document-id-format.md  0005-max-extraction-attempts-hard-cap.md  0006-failure-mode-skills-catalog.md
scripts/: trace_llm_calls.py
src/earnings_agents/: company_registry.py  config.py  hooks.py  llm_factory.py  worker_progress.py  workflow.py  workflow_state.py
src/earnings_agents/analysis/: __init__.py  skills.py  (+5 more)
tests/: test_analyze_metrics.py  test_calculators.py  test_cleanup_metrics.py  test_company_registry.py  test_discover_earnings_release.py  test_edgar_client.py  test_extract_financial_metrics.py  test_extract_html_text.py  test_extract_pdf_text.py  test_failures_cli.py  test_golden_fixtures.py  test_llm_factory.py  test_mongodb_client.py  test_normalize_data_client.py  test_propose_hint.py  test_skills.py
(+35 files in other folders)
