[project]
name = "earning-agents"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "langchain>=0.3.0",
    "langgraph>=0.2.0",
    "langchain-community>=0.3.0",
    "langchain-ollama>=0.2.0",
    "langchain-openai>=0.2.0",
    "pdfplumber>=0.11.0",
    "beautifulsoup4>=4.12.0",
    "requests>=2.32.0",
    "playwright>=1.44.0",
    "pymongo>=4.8.0",
    "apscheduler>=3.10.0",
    "pydantic>=2.8.0",
    "python-dotenv>=1.0.0",
    "lxml>=5.2.0",
    "rich>=13.0.0",
    "diskcache>=5.6.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "pytest-mock>=3.14.0",
]

[project.scripts]
earnings-scheduler = "earnings_agents.cli.scheduler:main"
earnings-run-once = "earnings_agents.cli.earnings:main"
earnings = "earnings_agents.cli.earnings:main"
earnings-failures = "earnings_agents.cli.failures:main"
earnings-skills = "earnings_agents.cli.skills:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/earnings_agents"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[dependency-groups]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "pytest-mock>=3.14.0",
]
